
Change Log:
----------------------------------------------------------------------

1.0.2.8 (UNRELEASAED)
----------------------------------------------------------------------
- Added: New import option to import each membership on its own, to prevent memory- or similar overflow issues.
- Added: Settings for PayPal gateways now also list the country "Croatia".
- Fixed: Import of M1 data now correctly creates recurring memberships.
- Fixed: People who saw a PHP notice "WDEV_DEBUG is undefined": It's gone!
- Fixed: Translation string missing.
- Fixed: Redirect addon was not working

1.0.2.7
----------------------------------------------------------------------
- Added: Constant 'MS_LOG_EMAILS' to enable log and display email logs
- Added: Constant 'MS_PROTECTED_MESSAGE_REVERSE_RULE' to implement reverse logic on membership based protection message
- Added: Bulk Delete Membership feature
- Fixed: BuddyPress Integration addon: "All BuddyPress Pages" rule being overwritten by rule set in Pages
- Fixed: Warning when the database table prefix is not the default "wp_"
- Fixed: Login on non-SSL page is broken when SSL forced for wp-admin
- Fixed: "Already have an account" link not sending user to login form after failed register attempt
- Fixed: "Already have a user account" doesn't redirect to purchase subscription after login
- Fixed: HTTPS not being forced when Stripe gateway is set to Live mode
- Fixed: Expired email sent even the user is not really expired
- Fixed: Invitation code addon: conflict with Yoast SEO plugin
- Fixed: Invitation code addon: usage count wasn't decreased when user removed it when signing up
- Fixed: Multiple Membership addon: Membership was not removed when set as cancel in upgrade path and pay later
- Fixed: Expired trial is not going to payment gateway when clicking "sign up" in invoice.
- Fixed: Taxamo addon: tax was not added as tax in PayPal and 2Checkout gateways
- Fixed: User can't register in Opera Mini browser